--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/tessel.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/psi4.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#dcd5c4" />
     <meta
       name="description"
-      content="Tesselwolf's Homepage"
+      content="Cipher's Homepage"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/tessel.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/psi4logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Tesselwolf's Homepage</title>
+    <title>Cipher's Homepage</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
